--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-img {
-  width: 40%;
-}
+
 .container {
   display: flex;
   gap: 10px;
@@ -8,39 +6,118 @@ img {
   row-gap: 10px;
   column-gap: 20px;
 }
-.flex-container {
-  margin: 10px;
+html {
+  box-sizing: border-box;
 }
-.pulser {
-  width: 30px;
-  height: 30px;
-  background: rebeccapurple;
-  border-radius: 50%;
-  position: absolute;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
-.pulser::after {
-  animation: pulse 1000ms cubic-bezier(0.9, 0.7, 0.5, 0.9) infinite;
+img {
+  width: 300px;
+}
+a {
+  color: #F7FFF7;
+}
+a:hover {
+  text-decoration: none;
+}
+h1 {
+  font-size: 100px;
+  line-height: 1;
+}
+h2 {
+  font-size: 45px;
+}
+h1, h2 {
+  font-family: 'Caveat', cursive;
+  font-weight: 400;
+  margin: 0;
+}
+.content-wrap {
+  width: 800px;
+  margin: 0 auto;
+  padding: 60px 0;
+}
+h3 {
+  margin-bottom: 0;
+}
+.item-details h3 + p {
+  font-style: italic;
+}
+.item-details h3 ~ p {
+  margin: 0;
 }
 
-@keyframes pulse {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    transform: scale(1.4);
-    opacity: 0.4;
-  }
+}
+.projects a {
+  color: #F7FFF7;
+}
+.projects .btn {
+  color: #F7FFF7;
+  background: #2F3061;
+  text-decoration: none;
+  padding: 8px;
+  border-radius: 4px;
+  display: inline-block;
+}
+.projects .btn:hover {
+  background: rgba(47, 48, 97, 80%);
+}
+.project-item {
+  overflow: hidden;
+  border-bottom: 1px dashed #343434;
+  padding: 25px 0;
+}
+.project-item img {
+  float: left;
+  margin-right: 20px;
+}
+.project-item h3 {
+  margin-top: 0;
 }
 
-.pulser::after {
-  content: '';
-  position: absolute;
+footer {
+  background: #898B8F;
+  color: #F7FFF7;
+  text-align: center;
+}
+.contact-list {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+.contact-list a {
+  padding: 15px;
+  display: inline-block;
+}
+input[type=text], select, textarea {
   width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: blueviolet;
-  border-radius: 50%;
-  z-index: -1;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #A2A5AB;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #898B8F;
+}
+
+.form {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
